--- a/app/views/contacts/thanks.html.erb
+++ b/app/views/contacts/thanks.html.erb
@@ -1,6 +1,17 @@
-<div class="page-header">
-  <h1>お問い合わせ</h1>
-</div>
-<p>
-  お問い合わせいただきありがとうございました。
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Visualemotion</title>
+    <%= stylesheet_link_tag    'contacts', media: 'all', 'data-turbolinks-track' => true %>
+
+    <div class="page-header">
+      <h1>CONTACT</h1>
+    </div>
+  </head>
+
+  <body>
+  	<br>
+	<p>お問い合わせいただきありがとうございました</p>
+  </body>
+
+<html>
