--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing contact</h1>
+<!-- <h1>Editing contact</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @contact %> |
-<%= link_to 'Back', contacts_path %>
+<%= link_to 'SHOW', @contact %> |
+<%= link_to 'BACK', contacts_path %>
+ -->
