--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,10 +1,6 @@
-@charset "UTF-8";
-
-@import "normalize.css";
-@import "common.css";
-@import "books.css";
-/*@import "contacts.css";*/
-/*@import "about.css";*/
-/*@import "scaffolds.css";
+/*
+*= require_self
+*= require tops
 */
-*= require css/lightbox
+
+
