--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -10,7 +10,6 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
@@ -35,7 +34,7 @@
     <%= f.label :category_id %><br>
     <%= f.number_field :category_id %>
   </div>
-  <div class="field">
+  <div class="field text">
     <%= f.label :note %><br>
     <%= f.text_area :note %>
   </div>
