--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -10,6 +10,10 @@
    <script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?4XU2G~E0OwQ%3D" charset="utf-8"></script>
 </head>
 
+<!-- メニューバー　-->
+<p id="backhome"><%= link_to 'Home', 'top' %></li>
+  <!-- メニューバー　-->
+
 <body>
   <div class="message1">
     <div class="m1-blackbox">
@@ -25,6 +29,8 @@
       </div>
     </div>
   </div>
+
+
 
 
   <div class="message2">
