--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -1,9 +1,18 @@
 // Place all the styles related to the Books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+  background-image: image-url('contact.jpg');
+  background-size: cover;
+}
+
+
+
 table{
-	width: 80%;
-	margin: 0 auto;
+	border: 1px solid #ccc;
+}
+h1{
+	padding: 0;
 }
 
 .field{
@@ -12,7 +21,7 @@ table{
 }
 input{
 	width: 300px;
-	height: 70px;
+	height: 30px;
 	border-radius: 10px;
 	margin: 0 auto;
 
@@ -21,3 +30,4 @@ input{
 .actions{
 	text-align: center;
 }
+
