--- a/app/assets/stylesheets/tops.css.scss
+++ b/app/assets/stylesheets/tops.css.scss
@@ -7,8 +7,9 @@ $font-family:'Raleway', sans-serif, "リュウミン L-KL", "Ryumin Light KL", "
 body{
   margin: 0;
   padding: 0;
-  font-family:Futura,'Raleway', sans-serif, "リュウミン L-KL", "Ryumin Light KL", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
-  font-weight: bold;
+  height: 3000px;
+  font-family:'Raleway', sans-serif, "リュウミン L-KL", "Ryumin Light KL", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+
 }
 a:link {
   font-style:normal;
