--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New book</h1>
+<h2 style="color:black; margin:0;">New book</h2>
 
 <%= render 'form' %>
 
+<div class="actions">
 <%= link_to 'Back', books_path %>
+<div>
