--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
 
+
+    
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
@@ -15,7 +17,9 @@
      <script src="assets/jquery.simplesidebar.min.js"></script>
      <script src="assets/jquery.infinitescroll.min.js"></script>
      <script src="assets/jquery.masonry.min.js"></script>
+     <script src="assets/jquery.socialbutton-1.9.0.min.js"></script>
      <link href='http://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'><script src="masonry.pkgd.min.js"></script>
+
 
 
   </head>
