--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -42,6 +42,10 @@
     <%= f.label :del_flg %><br>
     <%= f.number_field :del_flg %>
   </div>
+  <div class="field">
+   <%= f.label :tag_list, "Tags (separated by commas)" %><br />
+  <%= f.text_field :tag_list %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
