--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,6 +8,9 @@
 
 <h1>Visual Emotion Book List</h1>
 
+
+</div>
+
 <table class="table-striped">
   <thead>
     <tr>
@@ -19,6 +22,7 @@
       <th>Category</th>
       <th>Note</th>
       <th>Delflg</th>
+      <th>tag</th>
       <th></th>
       <th></th>
       <th></th>
@@ -36,6 +40,7 @@
         <td><%= book.category_id %></td>
         <td><%= book.note %></td>
         <td><%= book.del_flg %></td>
+        <td><%= book.tag_list %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
