--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -10,6 +10,12 @@
       </ul>
     </div>
   <% end %>
+
+  <div id="tag_cloud">
+  <% tag_cloud Book.tag_counts, %w{s m l} do |tag, css_class| %>
+    <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+  <% end %>
+</div>
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
