--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -21,8 +21,8 @@ $font-family-sans-serif:  "リュウミン L-KL", "Ryumin Light KL", "Hiragino K
   position: relative;
   top: 150px;
   background-position: center;
-  //margin-right: 300px;
-  //margin-left: 300px;
+  margin-right: 300px;
+  margin-left: 300px;
   padding: 50px 50px;
   background-size: 200px 150px;
   // padding: 20px 200px;
