--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,6 +8,9 @@
 
 <h1>Visual Emotion Book List</h1>
 
+<!-- tag_lists -->
+<p>Tags:  <%= article.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></p>
+
 
 </div>
 
