--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -49,9 +49,9 @@
       <div id="site-maker">
         <div class="message-header">SITE MAKER</div>
           <ul>
-            <li><font color="#00bfff"> BUNGO NAKAMURA</font> - Designer</li><br>
-            <li><font color="#90ee90"> MICHI KANDA</font> - Mentor</li><br>
-            <li><font color="pink"> MAYA KATAGIRI</font> - Engineer</li><br>
+            <li><font color="#00bfff"> BUNGO NAKAMURA</font> - Designer</li>
+            <li><font color="#90ee90"> MICHI KANDA</font> - Mentor</li>
+            <li><font color="pink"> MAYA KATAGIRI</font> - Engineer</li>
           </ul>
         </div>
       </div>
