--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -63,6 +63,8 @@ span{
 .m2-blackbox{
   background-color: rgba(0,0,0,0.7);
   background-position: center;
+  position: relative;
+  top: 80px;
   margin-right: 300px;
   margin-left: 300px;
   padding: 50px 50px;
@@ -80,9 +82,12 @@ span{
   line-height: normal;
 }
 
-ul{
+ul li{
 	list-style-type: none;
   float: none;
+  width: 300px;
+  line-height: 1.5rem;
+
 }
 
 /* message1 and 2 
