--- a/app/assets/stylesheets/tops.css.scss
+++ b/app/assets/stylesheets/tops.css.scss
@@ -7,7 +7,6 @@ $font-family:'Raleway', sans-serif, "リュウミン L-KL", "Ryumin Light KL", "
 body{
   margin: 0;
   padding: 0;
-  height: 3000px;
   font-family:'Raleway', sans-serif, "リュウミン L-KL", "Ryumin Light KL", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
 
 }
@@ -290,15 +289,42 @@ ul {
     }
   }
 
+#container {
+  width: 96%;
+  margin: 0 auto;
+}
+
 /* Books 
 -------------------------------*/
 .testimage {
-text-align: center;
+  width: 95%;
+  text-align: center;
+  margin: 0 auto;
   img{
-  margin: 2px
+    //width: 24.8%;
+    //padding: 3px 0.1% 0;
+    //margin: 0.1%;
+    //width: 320px;
+    border-radius: 10px;
+    
+    max-height: none;
+    //box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
+     &:hover{
+      background-color: rgba(10,10,10,1);
+          }
+        
   }
 }
 
+.w1{
+  width: 480px;
+}
+.w2{
+  width: 240px;
+}
+.w3{
+  width: 160px;
+}
 
 /* pop
 -------------------------------*/
@@ -343,7 +369,32 @@ text-align: center;
 
   .amazon_img{
     img{
+      margin-left: 50px;
       max-height:300px; 
+
     }
   }
+
+
+#close{
+    color: #aaa;
+    position: relative;
+    float: right;
+    font-size: 32px;
+    z-index:1200;
+    line-height: 50px;
+    text-align: center;
+    width: 50px;
+    height: 100%;
+    border-radius:3px;
+    text-decoration: none;
+    
+    transition-duration: 0.6s;
+}
+  #close:hover{
+    color:black;
+    /*opacity: 0.90;*/
+    /*filter:alpha(opacity=90);*/
+
+}
 
