--- a/app/views/contacts/confirm.html.erb
+++ b/app/views/contacts/confirm.html.erb
@@ -4,6 +4,10 @@
     <title>Visualemotion</title>
     <%= stylesheet_link_tag    'contacts', media: 'all', 'data-turbolinks-track' => true %>
 
+    <!-- メニューバー　-->
+    <p id="backhome"><%= link_to 'Home', 'top' %></li>
+      <!-- メニューバー　-->
+
     <div class="page-header">
       <h1>CONTACT</h1>
       <br>  
