--- a/app/views/law/law.html.erb
+++ b/app/views/law/law.html.erb
@@ -1,5 +1,69 @@
-<h1>Law#law</h1>
-<p>Find me in app/views/law/law.html.erb</p>
+<!DOCTYPE html>
+<html>
+
+<div class="cover">
+
+	<head>
+	  <title>VISUALEMOTION</title>
+	  <%= stylesheet_link_tag    'law', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'vendor', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+
+<!-- 	  <p class="backhome"><%= link_to 'About', 'about' %></p> -->
+	  <p class="backhome"><%= link_to 'Home', 'top' %></p>
+	</head>
+
+	<body>
+      <div class="blackbox">
+      　<div class="header1">利用規約</div>
+ 　　　　<div class="body1">
+		 	<strong>本規約への同意：</strong>
+		 	利用者は、本サービスの利用を以て本規約に同意したものとみなします。
+		 	また本規約は、利用者への事前の告知なく任意の理由で変更されることがあります。<br>
+			<strong>本サービスの変更および停止：</strong>
+			利用者への事前の告知なく任意の理由で、本サービスの提供を中断もしくは停止することができるものとします。
+			またそれにより生じた一切の損害について、責任を負わないものとします。<br>
+			<strong>責任の範囲：</strong>
+			本サービスを利用してなされた一切の行為およびその結果について、責任を負わないものとします。<br>
+			<strong>保証の否認：</strong>
+			本サービスは、提供する写真集の情報にについて正確性、最新性その他を保証するものではありません。
+			利用者の責任において判断しご利用いただくものとします。<br>
+			<strong>アクセスログの利用：</strong>
+			利用者の統計的分析を行いよりよいサービスを提供するため、利用者のアクセスログを利用することがあります。
+			また利用者はこれを承諾するものとします。<br>
+			<strong>知的財産権：</strong>
+			本サービスが提供する写真集の情報に関する権利は本サービス運営団体は所有しておりません。
+			本サービスを構成する文章、画像およびプログラムに関する権利は本サービス運営団体が所有します。<br>
+			<strong>本サービス運営団体への連絡：</strong>
+			本サービスに関する問い合わせ等につきましては「CONTACT」ページをご利用ください。<br>
+<!-- 			<br> -->
+			2014年12月30日
+		 </div>
+	  </div>
+
+	</body>
 
 
- <%= link_to 'ABOUT', 'about' %>
+</div>
+
+<!-- 
+		　<div class="sub-header">本規約への同意</div>
+		  	利用者は、本サービスの利用を以て本規約に同意したものとみなします。
+		  	また本規約は、利用者への事前の告知なく任意の理由で変更されることがあります。
+		  <div class="sub-header">本サービスの変更および停止</div>
+		  	利用者への事前の告知なく任意の理由で、本サービスの提供を中断もしくは停止することができるものとします。
+		  	またそれにより生じた一切の損害について、責任を負わないものとします。
+		  <div class="sub-header">責任の範囲</div>
+		  	本サービスを利用してなされた一切の行為およびその結果について、責任を負わないものとします。
+		  <div class="sub-header">保証の否認</div>
+		  	本サービスは、提供する情報にについて正確性、最新性その他を保証するものではありません。
+		  	ご自身のご判断にてご利用ください。
+		  <div class="sub-header">本サービスへの連絡</div>
+		  	利用者の統計的分析を行い本サービスをよりよいものとし提供するため、利用者のアクセスログを利用することがあります。
+		  	また利用者はこれを承諾するものとします。
+		  <div class="sub-header">知的財産権</div>
+		 本サービスを構成する文章、画像およびプログラムに関する権利は本サービス運営団体が所有します。
+		  <div class="sub-header">本サービス運営団体への連絡</div>
+		  	本サービスに関する問い合わせ等につきましては「CONTACT」ページより行うものとします。 -->
+
+
