--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -57,10 +57,12 @@
       </div>
     </div>
   </div>
+  
+<!-- 
+<%= link_to '利用規約', 'law' %> -->
 
 <%= yield %>
 
-<%= link_to '利用規約', 'law' %>
 
 </body>
 </html>
